--- a/.gitignore
+++ b/.gitignore
@@ -455,4 +455,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,jetbrains,pycharm,visualstudiocode,python
+# alembic
+alembic.ini
