--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,10 @@ services:
     image: mariadb:10.5
     restart: on-failure
     environment:
-      MYSQL_ROOT_PASSWORD: pas
-      MYSQL_DATABASE: product-fast
-      MYSQL_USER: user
-      MYSQL_PASSWORD: pas
+      MYSQL_ROOT_PASSWORD: docker
+      MYSQL_DATABASE: fastapi-docker
+      MYSQL_USER: docker
+      MYSQL_PASSWORD: docker
     build:
       context: ./database
     volumes:
