--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,28 +13,18 @@ services:
         aliases:
           - local.fast-api
     depends_on:
-      db:
-        condition: service_healthy
+      - db
 
   db:
-    image: mariadb:10.5
+    image: postgres
     restart: on-failure
     environment:
-      MYSQL_ROOT_PASSWORD: docker
-      MYSQL_DATABASE: fastapi-docker
-      MYSQL_USER: docker
-      MYSQL_PASSWORD: docker
-    build:
-      context: ./database
-    volumes:
-      - ./database/init:/docker-entrypoint-initdb.d
+      - DATABASE_HOST=localhost
+      - POSTGRES_USER=docker
+      - POSTGRES_PASSWORD=docker
+      - POSTGRES_DB=fastapi-docker-postgres
     ports:
-      - "3306:3306"
-    healthcheck:
-      test: [ "CMD", "service","mariadb","status" ]
-      interval: 5s
-      timeout: 10s
-      retries: 5
+      - "5432:5432"
     networks:
       private-net:
         aliases:
