--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
 
   db:
     image: postgres
-    restart: on-failure
+    restart: always
     environment:
       - DATABASE_HOST=localhost
       - POSTGRES_USER=docker
