--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 SECRET_KEY=secret
 
 PGSQL_HOST=localhost
-PGSQL_PORT=3306
+PGSQL_PORT=5432
 PGSQL_USER=root
-PGSQL_PASSWORD=
-PGSQL_DATABASE=bd
+PGSQL_PASSWORD=password
+PGSQL_DATABASE=database
