--- a/alembic.example.ini
+++ b/alembic.example.ini
@@ -3,7 +3,7 @@ script_location = alembic
 prepend_sys_path = .
 
 version_path_separator = os  # Use os.pathsep. Default configuration used for new projects.
-sqlalchemy.url = mysql+mysqlconnector://root:@localhost:3306/db
+sqlalchemy.url = postgresql://user:password@host:port/database
 
 [post_write_hooks]
 
