--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,9 @@ services:
     container_name: postgresql
     restart: always
     environment:
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=docker
-      - POSTGRES_DB=fastapi-docker-postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=6565
+      - POSTGRES_DB=fastapi
     ports:
       - "5432:5432"
     networks:
