Update pydantic 2 and fastapi 0.100

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.98.0
+fastapi==0.100.0
 uvicorn[standard]
 python-dotenv
-pydantic
+pydantic==2.1.1
 python-multipart
 pyjwt==2.8.0
 mangum
