--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 SECRET_KEY=secret
 
-PGSQL_HOST=localhost
-PGSQL_PORT=5432
-PGSQL_USER=root
-PGSQL_PASSWORD=password
-PGSQL_DATABASE=database
+DB_USER=root
+DB_PASSWORD=password
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=database
+DB_ENGINE=postgresql
